fixed cardview z-index, also fixed positioning on the x button

--- a/src/components/content/project_components/Tracking/ProjectItem/ProjectCards/modals/cardview.scss
+++ b/src/components/content/project_components/Tracking/ProjectItem/ProjectCards/modals/cardview.scss
@@ -38,6 +38,7 @@
         .cardview-title{
             // border: 1px solid red;
             width: 100%;
+
             text-align: left;
             line-height: 25px;
             font-size: 20px;
@@ -89,6 +90,7 @@
     display: flex;
     flex-direction: column;
     width: 200px;
+    height: 100%;
     // border: 1px solid blue;
 
     .cv-side-title {
@@ -108,11 +110,14 @@
         margin-bottom: 10px;
 
         span{
+            display: flex;
+            justify-content: flex-end;
             cursor: pointer;
-            position: relative;
+            
             width: 30px;
             height: 30px;
             font-size: 30px;
+            line-height: 15px;
         }
 
     }
@@ -125,7 +130,7 @@
         flex-direction: column;
         align-items: flex-start;
         // border: 1px solid blue;
-        width: 120px;
+        width: 100%;
 
         .side-options{
             width: 100%;
