--- a/src/components/content/project_components/Tracking/ProjectItem/projectitem.scss
+++ b/src/components/content/project_components/Tracking/ProjectItem/projectitem.scss
@@ -1,18 +1,13 @@
-.project-item-parent{
+
+
+.project-item{
     position: relative;
     display: inline-block;
     width: 270px;
     margin: 10px;
     max-height: 100%;
     white-space: nowrap;
-}
-
-.project-item{
-    display: block;
-   
     
-    position: relative;
-    z-index: -1;
     
    
     
